# ELMKernels

./: .clang-format  .gitignore  CLM-ELM_software_plan.txt  CMakeLists.txt  DEV_NOTES.txt  INDEX_MAP_README.txt  INSTALL.md  LICENSE  LICENSE.md  Overview.md  README.md  buildELMphys.sh
driver/: CMakeLists.txt  driver.cc
driver/cc/: CMakeLists.txt  driver.cc  whole_system.cc
driver/kokkos/: CMakeLists.txt  CallBareGroundFluxes.hh  CallCanopyFluxes.hh  CallCanopyHydrology.hh  CallCanopyTemperature.hh  CallSurfaceRadiation.hh  InitLSM.hh  Kokkos_functors.hh  aerosol_kokkos.cc  aerosol_kokkos.hh  albedo_kokkos.cc  albedo_kokkos.hh  atm_data_helpers.cc  atm_data_helpers.hh  atm_forcing_kokkos.cc  atm_helpers.cc  atm_helpers.hh  bareground_fluxes_kokkos.cc  bareground_fluxes_kokkos.hh  canopy_fluxes_kokkos.cc  canopy_fluxes_kokkos.hh  canopy_hydrology_kokkos.cc  canopy_hydrology_kokkos.hh  canopy_temperature_kokkos.cc  canopy_temperature_kokkos.hh  conserved_quantity_kokkos.cc  conserved_quantity_kokkos.hh  driver.cc  elm_kokkos_interface.cc  elm_kokkos_interface.hh  init_timestep_kokkos.cc  init_timestep_kokkos.hh  initialize_elm_kokkos.cc  initialize_elm_kokkos.hh  interface_data_transfer.cc  interface_data_transfer.hh  kokkos_driver.cc  kokkos_elm_initialize.cc  kokkos_elm_initialize.hh  minimal_elm_interface.cc  (+12 more)
driver/utils/: CMakeLists.txt  array.hh  date_time.hh  kokkos_utils.hh  legion_utils.hh  min_max_sum.hh  mpi_types.hh  read_input.cc  read_input.hh  read_netcdf.hh  read_pnetcdf.hh  utils.cc  utils.hh
src/: BareGroundFluxes.cc  BareGroundFluxes.h  BareGroundFluxesMod_functions.cc  BareGroundFluxes_impl.h  BareGroundFluxes_impl.hh  CMakeLists.txt  CallCanopyHydrology.hh  CanopyFluxes.cc  CanopyFluxes.h  CanopyFluxes_impl.hh  CanopyHydrology.cc  CanopyHydrology.h  CanopyHydrologyKern1.F90  CanopyHydrology_impl.hh  CanopyTemperature.cc  CanopyTemperature.h  CanopyTemperatureMod_functions.cc  CanopyTemperature_impl.hh  ELM_class_pseudocode.hh  FrictionVelocity.cc  FrictionVelocity.h  FrictionVelocityMod_functions.cc  InitBiogeophys.hh  InitSnowLayers.hh  InitTimestep.hh  InitTopography.hh  Init_SnowLayers.hh  Init_Timestep.hh  Init_Topography.cc  Makefile  Photosynthesis.cc  Photosynthesis.h  Photosynthesis.hh  QSat.cc  QSat.h  QSatMod_functions.cc  QSatMod_functions.hh  ReadAtmInput.hh  ReadAtmosphere.hh  ReadPFTConstants.hh  (+37 more)
src/cc/: CanopyHydrology.hh  CanopyHydrology_FracH2OSfc.cc  CanopyHydrology_FracH2OSfc.cpp  CanopyHydrology_FracH2OSfc_impl.hh  CanopyHydrology_FracWet.cc  CanopyHydrology_FracWet.cpp  CanopyHydrology_FracWet_impl.hh  CanopyHydrology_Interception.cc  CanopyHydrology_Interception.cpp  CanopyHydrology_Interception_impl.hh  CanopyHydrology_SnowWater_impl.hh  CanopyHydrology_cc.hh  CanopyHydrology_cpp.hh  CanopyHydrology_decl.hh  CanopyHydrology_fort.hh  Makefile  clm_varpar.h  column_varcon.h  landunit_varcon.h
src/cc_fortran_wrappers/: Makefile
src/cc_kokkos/: CanopyHydrology_FracH2OSfc.cc  clm_varctl.h  clm_varpar.h
src/cc_serial/: CanopyHydrology_FracH2OSfc.cpp  CanopyHydrology_FracWet.cpp  CanopyHydrology_Interception.cpp  CanopyHydrology_SnowWater_impl.hh  CanopyHydrology_cpp.hh
src/cime_utils/: shr_assert_mod.F90  shr_infnan_mod.F90  shr_kind_mod.F90
src/config/: Makefile.config  Makefile.logo  Makefile.rules  Makefile_ecoon_mac.config  Makefile_summit.config  Makefile_user.config
src/cpp/: CanopyHydrology.hh  CanopyHydrology_Interception.cpp  CanopyHydrology_SnowWater_impl.hh  CanopyHydrology_SnowWater_impl_kokkos.hh  CanopyHydrology_cpp.hh  CanopyHydrology_private.h
src/cuda/: CanopyHydrology.cuh  CanopyHydrology_FracH2OSfc.cu  CanopyHydrology_FracWet.cu  CanopyHydrology_Interception.cu  CanopyHydrology_SnowWater_impl.cuh  Makefile  column_varcon.h  landunit_varcon.h
src/data/: CMakeLists.txt  aerosol_data.h  aerosol_data_impl.hh  aerosol_data_new.h  aerosol_data_new_impl.hh  aerosol_data_old.cc  aerosol_data_old.h  atm_data.h  atm_data_impl.hh  elm_constants.h  elm_data.h  elm_data_impl.hh  elm_state.h  elm_state_impl.hh  input_containers.h  input_containers_impl.hh  pft_data.h  pft_data_impl.hh  phenology_data.h  phenology_data_impl.hh  snicar_data.h  snicar_data_impl.hh  soil_data.h  soil_data_impl.hh
src/elm_physics/: ActiveLayerMod_functions.cc  BareGroundFluxes.cc  BareGroundFluxes.h  BareGroundFluxes_impl.hh  CMakeLists.txt  CanHydro_newphys_external_logic.cc  CanHydro_newphys_external_logic.h  CanHydro_newphys_internal_logic.cc  CanHydro_newphys_internal_logic.h  CanopyFluxes.h  CanopyFluxes_impl.hh  CanopyHydrology.cc  CanopyHydrology.h  CanopyHydrology_impl.hh  CanopyHydrology_newphysics.cc  CanopyHydrology_newphysics.hh  CanopyTemperature.cc  CanopyTemperature.h  CanopyTemperature_impl.hh  ELMConstants.h  FrictionVelocity.cc  FrictionVelocity.hh  InitBiogeophys.hh  InitSnowLayers.hh  InitSnowLayers_impl.hh  InitSoil.hh  InitTimestep.hh  InitTimestep_impl.hh  InitTopography.cc  InitTopography.hh  LandType.h  Photosynthesis.cc  Photosynthesis.h  Photosynthesis.hh  Photosynthesis_impl.hh  QSat.cc  QSat.h  QSat.hh  RadiationSlopeModel.hh  ReadAtmosphere.hh  (+149 more)
src/fortran/: CanopyHydrologyKern1.F90  CanopyHydrologyKern2.F90  CanopyHydrology_FracH2OSfc.F90  CanopyHydrology_FracWet.F90  CanopyHydrology_Interception.F90  CanopyHydrology_SnowWater.F90  Makefile  clm_varctl.F90  clm_varpar.F90
src/input/: CMakeLists.txt  aerosol_data_impl.hh  atm_data.h  atm_data_impl.hh  elm_state.h  monthly_data.h  pft_data.h
src/physics/: CMakeLists.txt  aerosol_physics.h  aerosol_physics_impl.hh  aerosol_physics_new.h  aerosol_physics_new_impl.hh  aerosol_physics_old.h  aerosol_physics_old_impl.hh  atm_physics.h  atm_physics_impl.hh  bareground_fluxes.h  bareground_fluxes_impl.hh  canopy_fluxes.h  canopy_fluxes_impl.hh  canopy_hydrology.h  day_length.cc  (+51 more)
test/: CMakeLists.txt  CanHydro_notes.txt  old_test_CanopyHydrology.cc  test_BGFlux.cc  test_CanFlux.cc  test_CanHydro.cc  test_CanHydro_newphysics.cc  test_CanSunShade.cc  test_CanTemp.cc  test_CanopyHydrology.cc  test_SNICAR.cc  test_SurfAlb.cc  test_SurfAlb_input.cc  test_SurfRad.cc
(+251 files in other folders)
