cmake_minimum_required(VERSION 3.10)
find_package(RAJA)
include_directories(${YOUR_DIRECTORY})
add_executable(test_CanopyHydrology_kern1_single.exe CanopyHydrology_kern1_single.cpp)
target_link_libraries(test_CanopyHydrology_kern1_single.exe RAJA)
target_include_directories(test_CanopyHydrology_kern1_single.exe ${RAJA_INCLUDE_DIR}